--- a/.github/workflows/postman_tests.yml
+++ b/.github/workflows/postman_tests.yml
@@ -17,4 +17,4 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
       - run: npm install -g newman
-      - run: run newman postman_tests/Books.postman_collection.json -e postman_tests/test.postman_environment.json
+      - run: run newman postman_tests\Books.postman_collection.json -e postman_tests\test.postman_environment.json
